--- a/myVue/index.html
+++ b/myVue/index.html
@@ -6,7 +6,7 @@
     <title>克隆V部落</title>
   </head>
   <body>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <div id="app">
+    </div>
   </body>
 </html>
